docs: Enhance CLAUDE.md with code style guides, key files, APK build requirements
Add detailed Go/TypeScript/Kotlin code style conventions, pre-commit checklist,
key files reference, Android APK container build requirements, and HelixQA bank
format note. Content sourced from AGENTS.md to ensure consistency.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>